--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.4",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.2",
     "devextreme": "19.2-stable",
     "devextreme-themebuilder": "19.2-stable",
-    "devextreme-vue": "19.2-stable"
+    "devextreme-vue": "19.2-stable",
+    "moment": "^2.24.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vue-the-mask": "^0.11.1",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
