--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
@@ -15,8 +16,10 @@
     "devextreme": "19.2-stable",
     "devextreme-themebuilder": "19.2-stable",
     "devextreme-vue": "19.2-stable",
+    "hh-mm-ss": "^1.2.0",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-fa": "^2.0.1",
     "vue-router": "^3.1.3",
     "vue-the-mask": "^0.11.1",
     "vuex": "^3.1.2"
