--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hh-mm-ss": "^1.2.0",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-clipboard2": "^0.3.1",
     "vue-fa": "^2.0.1",
     "vue-router": "^3.1.3",
     "vue-the-mask": "^0.11.1",
